--- a/app/src/pages/FarmPage.scss
+++ b/app/src/pages/FarmPage.scss
@@ -137,6 +137,7 @@
     &__reset-confirm-btn {
         background: var(--color-error);
         color: #fff;
+        -webkit-text-fill-color: #fff;
         border-color: var(--color-error);
 
         &:hover {
